<resources>
    <string name="app_name">Lawan Corona</string>
    <string name="total_positif">Total Positif</string>
    <string name="_100_000">100,000</string>
    <string name="orang">ORANG</string>
    <string name="total_sembuh">Total Sembuh</string>
    <string name="total_meninggal">Total Meninggal</string>
    <string name="daftar_tiap_negara">Daftar Tiap Negara</string>
    <string name="indonesia">Indonesia</string>
    <string name="dunia">Dunia</string>
    <string name="nama_wilayah">Nama Wilayah</string>
    <string name="pembaharuan_terakhir">Pembaharuan Terakhir</string>
    <string name="pembaharuan_terakhir_custom">Pembaharuan Terakhir : %1$s</string>
    <string name="daftar_kasus_corona_di_custom">Daftar Kasus Corona\nDi %1$s</string>
    <string name="dibuat_dengan_cinta_oleh_penulis">Dibuat dengan %1$s oleh %2$s</string>
    <string name="data_oleh_universitas_johns_hopkins">Data oleh Universitas Johns Hopkins</string>
    <string name="terimakasih_untuk_teguh_aprianto">Terimakasih untuk Teguh Aprianto</string>
</resources>
