<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:id="@+id/tvJudul"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="2"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="Daftar Kasus Corona Di Dunia" />

            <LinearLayout
                android:id="@+id/layoutWilayah"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/background_general"
                android:orientation="vertical"
                android:padding="10dp"
                tools:ignore="RelativeOverlap">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/nama_wilayah"
                    android:src="@drawable/ic_world" />

                <TextView
                    android:id="@+id/tvWilayah"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:text="@string/dunia"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/constraintLayout"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:weightSum="3"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_positif"
                    android:orientation="vertical"
                    android:padding="10dp"
                    tools:ignore="NestedWeights">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/total_positif"
                        android:src="@drawable/ic_sad"


                        />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/total_positif"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvTotalKasusPositif"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="18sp"


                        tools:text="@string/_100_000" />


                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/orang"
                        android:textColor="@color/white"
                        android:textSize="14sp"


                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_sembuh"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/total_sembuh"
                        android:src="@drawable/ic_happy"


                        />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/total_sembuh"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvTotalKasusSembuh"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="18sp"


                        tools:text="@string/_100_000" />


                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/orang"
                        android:textColor="@color/white"
                        android:textSize="14sp"


                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_meninggal"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/total_meninggal"
                        android:src="@drawable/ic_cry"


                        />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/total_meninggal"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:id="@+id/tvTotalKasusMeninggal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="18sp"

                        tools:layout_editor_absoluteX="10dp"
                        tools:text="@string/_100_000" />


                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/orang"
                        android:textColor="@color/white"
                        android:textSize="14sp"


                        />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/layouyPresentase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:baselineAligned="false"
            android:weightSum="3">


            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="0.9"
                android:padding="10dp">


            </View>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1.2"
                android:background="@drawable/background_general"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/presentase_sembuh"
                    android:src="@drawable/ic_progress"


                    />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/presentase_sembuh"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="10dp" />

                <TextView
                    android:id="@+id/tvPresentase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    tools:text="@string/_100_000" />


            </LinearLayout>


            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="0.9"
                android:padding="10dp">


            </View>


        </LinearLayout>

        <TextView
            android:id="@+id/tvPembaharuanTerakhir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layouyPresentase"
            android:layout_margin="10dp"
            android:ellipsize="end"
            android:maxLines="4"
            android:textColor="@color/black"
            android:textSize="12sp"
            tools:text="@string/pembaharuan_terakhir" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"

            android:orientation="horizontal"
            android:weightSum="2"

            >

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="0.5" />

            <TextView
                android:id="@+id/tvDatadBy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/data_oleh_universitas_johns_hopkins"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="0.5" />


        </LinearLayout>


    </RelativeLayout>

</layout>